--- a/src/app/components/menu-lateral/menu-lateral.component.html
+++ b/src/app/components/menu-lateral/menu-lateral.component.html
@@ -4,7 +4,7 @@
         <h2>Usuario: {{ usuario }}</h2>
     </div>
     <div class="opciones-menu">
-        <button class="btn btn-danger" (click)="cerrarSesion()">Cerrar Sesión</button>
+        <button class="btn btn-danger" (click)="cerrarSesion()">Cerrar Sesión</button>&nbsp;
         <button class="btn btn-primary" (click)="editarInformacion()">Editar Información</button>
     </div>
 </div>
