--- a/src/app/components/posts/create-post/create-post.component.html
+++ b/src/app/components/posts/create-post/create-post.component.html
@@ -1,4 +1,5 @@
 <!-- create-post.component.html -->
+<app-menu-lateral></app-menu-lateral>
 <div class="container mt-5">
     <h2>Crear nuevo post</h2>
     <div class="form-group">
@@ -6,5 +7,6 @@
         <textarea id="content" [(ngModel)]="content" class="form-control" required></textarea>
     </div>
     <br>
-    <button type="submit" class="btn btn-primary" (click)="createPost()">Crear Post</button>
+    <button type="submit" class="btn btn-primary" (click)="createPost()">Crear Post</button>&nbsp;
+    <button type="button" class="btn btn-success" (click)="volver()">Cancelar</button>
 </div>
