--- a/src/app/components/posts/create-post/create-post.component.html
+++ b/src/app/components/posts/create-post/create-post.component.html
@@ -1,11 +1,17 @@
 <!-- create-post.component.html -->
 <div class="container mt-5">
     <h2>Crear nuevo post</h2>
-    <div class="form-group">
-        <label for="content">Contenido:</label>
-        <textarea id="content" [(ngModel)]="content" class="form-control" required></textarea>
-    </div>
-    <br>
-    <button type="submit" class="btn btn-primary" (click)="createPost()">Crear Post</button>&nbsp;
-    <button type="button" class="btn btn-success" (click)="volver()">Cancelar</button>
+    <form [formGroup]="postForm" (ngSubmit)="createPost()">
+        <div class="form-group">
+            <label for="title">Titulo:</label>
+            <input id="title" formControlName="title" class="form-control" required />
+        </div>
+        <div class="form-group">
+            <label for="content">Contenido:</label>
+            <textarea id="content" formControlName="content" class="form-control" required></textarea>
+        </div>
+        <br>
+        <button type="submit" class="btn btn-primary" [disabled]="!postForm.valid">Publicar</button>&nbsp;
+        <button type="button" class="btn btn-success" (click)="volver()">Cancelar</button>
+    </form>
 </div>
